core/b2b/core-services/n8n/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: n8n
  labels:
    name: n8n
    core.kaos.io/zone: b2b
