core/b2b/core-services/n8n/database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: n8n
  labels:
    app: postgres
    core.kaos.io/type: automation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:13
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: n8n-db-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: n8n-db-storage
          persistentVolumeClaim:
            claimName: n8n-db-pvc
