core/b2b/core-services/n8n/n8n-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n
  namespace: n8n
  labels:
    app: n8n
    core.kaos.io/type: automation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: n8n
  template:
    metadata:
      labels:
        app: n8n
    spec:
      containers:
        - name: n8n
          image: n8nio/n8n:latest
          ports:
            - containerPort: 5678
          volumeMounts:
            - name: n8n-app-storage
              mountPath: /home/node/.n8n
            - name: n8n-certs
              mountPath: /home/node/certs
              readOnly: true
      volumes:
        - name: n8n-app-storage
          persistentVolumeClaim:
            claimName: n8n-app-pvc
        - name: n8n-certs
          secret:
            secretName: n8n-cert
