core/b2b/core-services/n8n/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: n8n
  labels:
    app: postgres
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
