core/b2b/core-services/n8n/n8n-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n
  namespace: n8n
  labels:
    app: n8n
    core.kaos.io/type: automation
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.245
  ports:
    - port: 5678
      targetPort: 5678
      protocol: TCP
      name: http
  selector:
    app: n8n
